# algae-bp

./: .gitignore  Makefile  busybox.config  env.sh  libcap-001-miss-size_t.patch  linux-bp.config  linux-bp.dts  linux-bp.its  linux-qemuarm64.config  mosquitto-config.mk  openocd-001-math.patch  readme.md  requirements.txt  uEnv-bp.txt  uboot-am62x_beagleplay_a53_defconfig  uboot-bp-a53-defconfig-005-uenv.patch  uboot-bp-a53-defconfig-006-log.patch  uboot-bp-a53-emmc-defconfig-005-uenv.patch  uboot-bp-a53-emmc.defconfig  uboot-bp-a53.defconfig  uboot-qemuarm64.config  ubootenv-bp-a53-emmc.txt  ubootenv-bp-a53.txt  uenv-bp.txt  wl18xx-001-plt.patch  wl18xx-001.patch  wpasup-001.patch
builder/: .gitignore  Makefile.bak  beagleplay-swd.cfg  build-aarch64-toolchain.sh  cross-aarch64.cmake  devsync.sh  eclipse-bp.h  elfstrip.py  ft232h-swd.cfg  httpdtest.py  meson-aarch64.ini  priv.py  proj.mk  qemu-system-aarch64.sh  run_qemu.sh  sd.py  sd.sh  sd2.py  sd_flash.sh  wavegen.py  xtool1.md
docs/: adafruit-ft232h.md  bp-gpio.txt  drmdevice-bp.txt  modeprint-bp.txt  modetest-bp.txt  nano33ble.md
package/: fcgi2  lighttpd
package/aloe/: Doxyfile  ev.c  log.h  readme.md  sys.cpp  util.cpp
package/aloe_ev/: ev.c  ev.h
package/cltest2/: Makefile  cltest2.cpp
package/cmake01/: CMakeLists.txt  main.cpp  utils.cpp  utils.h
package/dummy1/: Makefile  cli.h  ipc.cpp  ipc.h  main.cpp  mgmt.h  priv.h  priv_ev.h  template.h  templete.cpp  templete.h  tester_main.c  (+6 more)
ubuntu/: credentials.txt  info.md  seed.manifest  ubuntu-core-24-algae-arm64.json  ubuntu-core-24-algae-arm64.model
(+89 files in other folders)
